# wasm-speech-streaming

./: .gitignore  Cargo.toml  LICENSE  README.md  build-lib.sh  index.html  moshiWorker.js  server.py
.cargo/: config.toml
js/: moshi-worker.js  speech-recognition.js
prepare/: .gitignore
src/: config.rs  lib.rs  model.rs  moshi_worker.rs  utils.rs
