[package]
name = "wasm-speech-streaming"
version = "0.1.0"
edition = "2021"
description = "WASM speech streaming with Candle"
license = "MIT"

[dependencies]
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
num-traits = "0.2"
tokenizers = { version = "0.20", features = ["unstable_wasm"], default-features = false }

# App crates.
anyhow = "1.0"
log = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hound = "3.5"
safetensors = "0.4"

# Wasm specific crates.
getrandom = { version = "0.3", features = ["wasm_js"] }
gloo = "0.11"
js-sys = "0.3.64"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
wasm-bindgen-rayon = { version = "1.2", features = ["no-bundler"] }
rayon = "1.8"
wasm-logger = "0.2"
yew-agent = "0.2.0"
yew = { version = "0.20.0", features = ["csr"] }

moshi = "0.6.1"

[dependencies.web-sys]
version = "0.3.70"
features = [
  'Blob',
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'Request',
  'RequestCache',
  'RequestInit',
  'RequestMode',
  'Response',
  'Performance',
  'Worker',
  'MessageEvent',
  'MessagePort',
  'DedicatedWorkerGlobalScope',
  'WorkerGlobalScope',
  'WorkerLocation',
  'WorkerNavigator',
]

[lib]
crate-type = ["cdylib"]

